--- a/index.html
+++ b/index.html
@@ -4,6 +4,88 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
+    
   </head>
-  <body></body>
+  <nav class="navbar navbar-expand-lg sticky-top shadow-sm">
+    <div class="container-lg">
+        <a class="navbar-brand fw-bold" href="#">Naphat Chitcharoen</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#hero">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#ex">Experience</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<section class="hero" id="hero">
+    <div class="container-lg">
+        <div class="row align-items-center">
+            <div class="col-sm-6">
+                <h1 class="display-4 fw-bold">Naphat Chitcharoen</h1>
+                <p>Hi my name is Hug. I graduated from Chiangmai University. Nice to meet
+                  you!
+                </p>
+            </div>
+            <div class="col-sm-6 text-center">
+                <img src="profile.jpg" class="img-fluid" alt="">
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section class="about" id="ex">
+    <div class="container">
+        <h2 class="display-5 fw-bold mb-4">Experience</h2>
+        <p> I have worked as a staff member for Valor City ROV. <br>I play football ⚽, run 🏃‍♂️, and play game🎮</p>
+    </div>
+</section>
+
+
+
+<section class="contact" id="contact">
+    <div class="container">
+        <h2 class="display-5 fw-bold mb-4">Contact Me</h2>
+        <div class="row">
+            <div class="col-sm-4 mt-4">
+                <a href="mailto:naphat_chitcharoen@cmu.ac.th">naphat_chitcharoen@cmu.ac.th</a>
+            </div>
+            <div class="col-sm-4 mt-4">
+                <div class="social-media">
+                    <a href="#"><i class="bi bi-instagram"></i>huggynaphat</a><br>
+                    <a href="#"><i class="bi bi-facebook"></i>Naphat Chitcharoen</a>
+                </div>
+            </div>
+            <div class="col-sm-4 mt-4">
+                <a href="#">0999999999</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+  </body>
 </html>
