--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
                 <h1 class="display-4 fw-bold">Naphat Chitcharoen</h1>
                 <p>Hi my name is Hug. I graduated from Chiangmai University. Nice to meet
                   you!
-                </p>
+                </p><br><br><br>
+                <h2>Skill</h2><br><br>
+                <h5>Programming</h5>
+                <p> I have experience coding HTML,CSS and C++</p><br><br>
+                <h5>Design UX/UI</h5>
+                <p>I can design intuitive user interface</p>
             </div>
             <div class="col-sm-6 text-center">
                 <img src="profile.jpg" class="img-fluid" alt="">
