--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <nav class="navbar navbar-expand-lg sticky-top shadow-sm">
     <div class="container-lg">
-        <a class="navbar-brand fw-bold" href="#">Naphat Chitcharoen</a>
+        <a class="navbar-brand fw-bold" href="#">Portfolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
